--- a/now.json
+++ b/now.json
@@ -4,7 +4,7 @@
     "builds": [
         {
             "src": "subconverter/subconverter.exe",
-            "use": "now-static-bin",
+            "use": "vercel-static-bin",
             "config": {
                 "port": 25500,
                 "timeout": 1500,
